feat: Criação dos 4 últimos endPoints
Obs: A lógica de Vendedor está falha, pois não compreendi se era para ter algum método de adicionar as vendas para deixar mais dinâmico